src/test/deca/context/valid/test_unaryminus_valid.deca
// Description:
//    operation unary minus reussie
//
// Resultats:
//    y = -42.0
//
// Historique:
//    cree le 01/01/2024

{
   float x = 42 ;
   float y = -x;
}
